--- a/styles/print.css
+++ b/styles/print.css
@@ -1,90 +1,1 @@
-/*
-Error: Undefined mixin 'transition'.
-        on line 55 of d:/wamp/www/99dayin/views/app/sass/header.scss, in `transition'
-        from line 55 of d:/wamp/www/99dayin/views/app/sass/header.scss
-        from line 1 of d:/wamp/www/99dayin/views/app/sass/print.scss
-
-Backtrace:
-d:/wamp/www/99dayin/views/app/sass/header.scss:55:in `transition'
-d:/wamp/www/99dayin/views/app/sass/header.scss:55
-d:/wamp/www/99dayin/views/app/sass/print.scss:1
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:348:in `block in visit_mixin'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/stack.rb:98:in `block in with_mixin'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/stack.rb:115:in `with_frame'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/stack.rb:98:in `with_mixin'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:346:in `visit_mixin'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/tree/visitors/base.rb:36:in `visit'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/stack.rb:79:in `block in with_base'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/stack.rb:115:in `with_frame'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/stack.rb:79:in `with_base'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:158:in `visit'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:430:in `block (2 levels) in visit_rule'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:430:in `map'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:430:in `block in visit_rule'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:428:in `visit_rule'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/tree/visitors/base.rb:36:in `visit'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/stack.rb:79:in `block in with_base'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/stack.rb:115:in `with_frame'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/stack.rb:79:in `with_base'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:158:in `visit'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:430:in `block (2 levels) in visit_rule'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:430:in `map'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:430:in `block in visit_rule'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:428:in `visit_rule'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/tree/visitors/base.rb:36:in `visit'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/stack.rb:79:in `block in with_base'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/stack.rb:115:in `with_frame'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/stack.rb:79:in `with_base'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:158:in `visit'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:325:in `block (2 levels) in visit_import'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:325:in `map'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:325:in `block in visit_import'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/stack.rb:88:in `block in with_import'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/stack.rb:115:in `with_frame'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/stack.rb:88:in `with_import'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:322:in `visit_import'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/tree/visitors/base.rb:36:in `visit'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/stack.rb:79:in `block in with_base'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/stack.rb:115:in `with_frame'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/stack.rb:79:in `with_base'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:158:in `visit'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/tree/visitors/base.rb:52:in `map'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/tree/visitors/base.rb:52:in `visit_children'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:167:in `block in visit_children'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:166:in `visit_children'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/tree/visitors/base.rb:36:in `block in visit'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:186:in `visit_root'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/tree/visitors/base.rb:36:in `visit'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:157:in `visit'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/tree/visitors/perform.rb:8:in `visit'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/tree/root_node.rb:36:in `css_tree'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/tree/root_node.rb:20:in `render'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/engine.rb:278:in `render'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-import-once-1.0.5/lib/compass/import-once/engine.rb:17:in `block in render'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-import-once-1.0.5/lib/compass/import-once/engine.rb:29:in `with_import_scope'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/compass-import-once-1.0.5/lib/compass/import-once/engine.rb:16:in `render'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/plugin/compiler.rb:492:in `update_stylesheet'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/plugin/compiler.rb:209:in `each'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/plugin/compiler.rb:470:in `on_file_changed'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/lib/sass/plugin/compiler.rb:328:in `block in watch'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/vendor/listen/lib/listen/listener.rb:252:in `call'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/vendor/listen/lib/listen/listener.rb:252:in `on_change'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/vendor/listen/lib/listen/listener.rb:290:in `block in initialize_adapter'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/vendor/listen/lib/listen/adapters/polling.rb:48:in `call'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/vendor/listen/lib/listen/adapters/polling.rb:48:in `poll_changed_directories'
-c:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/sass-3.4.16/vendor/listen/lib/listen/adapter.rb:299:in `block in start_poller'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Error: Undefined mixin 'transition'.\A         on line 55 of d:/wamp/www/99dayin/views/app/sass/header.scss, in `transition'\A         from line 55 of d:/wamp/www/99dayin/views/app/sass/header.scss\A         from line 1 of d:/wamp/www/99dayin/views/app/sass/print.scss"; }
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font:inherit;font-size:100%;vertical-align:baseline}html{line-height:1}ol,ul{list-style:none}table{border-collapse:collapse;border-spacing:0}caption,th,td{text-align:left;font-weight:normal;vertical-align:middle}q,blockquote{quotes:none}q:before,q:after,blockquote:before,blockquote:after{content:"";content:none}a img{border:none}article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section,summary{display:block}html{height:100%;width:100%;font:10px/1.5 "Microsoft YaHei","Arial","榛戜綋","瀹嬩綋","icomoon",sans-serif}*{font-family:"Microsoft YaHei","Arial","榛戜綋","瀹嬩綋","icomoon",sans-serif}a{color:#000;text-decoration:none}.header{position:fixed;z-index:99;width:100%;height:68px;background-color:rgba(255,255,255,0.6);font-size:2.1rem;box-shadow:0 0 3px 3px #999}.header span{color:rgba(0,0,0,0.6)}.header .setWidth{position:relative;max-width:1200px;margin:0 auto;height:100%;color:rgba(0,0,0,0.6);display:-webkit-flex;display:flex;-webkit-align-items:center;align-items:center;-webkit-justify-content:space-between;justify-content:space-between}.header .logo .logo-print{vertical-align:middle}.header .title-btn,.header .login,.header .signin{float:left;position:relative;cursor:pointer;margin:0 18px;overflow:visible;transition:all .3s ease-in}.header .title-btn .name,.header .login .name,.header .signin .name{display:inline-block;width:115px;height:31px;line-height:31px;font-size:1.8rem;background-color:#0099ff;text-align:center;color:#fff;overflow:hidden;white-space:nowrap;text-overflow:ellipsis}.header .login,.header .signin{margin:0}.header .login+span{float:left}.header .detail-btn{position:absolute;z-index:2;display:inline-block;width:115px;height:auto;right:18px;top:46px;display:none}.header .detail-btn>a{margin-top:2px;width:100%;height:38px;line-height:38px;background-color:#b9dcff;color:#0099ff;display:block;text-align:center}.header .detail-btn>a:hover{background-color:#ACC7E2}.header .titles{overflow:hidden;position:relative}.header .titles a{color:rgba(0,0,0,0.6)}.header .homepage-btn::before,.header .introduction::before,.header .art-base::before,.header .login::before,.header .signin::before{position:absolute;content:attr(data-content);display:inline-block;top:-100%;color:#000}.header .homepage-btn:hover,.header .introduction:hover,.header .art-base:hover,.header .login:hover,.header .signin:hover{transform:translateY(100%)}
